--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,12 @@ h2{
   margin-left: 465px;
 }
 
-.section-accueil {
-    padding: 60px 80px;  
+body {
+    margin: 0;
+}
+
+section {
+    padding: 60px;
 }
 
 .img-presentation {
